--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,14 +12,14 @@ pipeline {
      stage ('Testing Stage') {
           steps{
                withMaven(maven : 'maven_3_6_1') {
-                  sh 'mvn test'
+                  sh 'mvn clean compile'
           }
       }
      }
      stage ('Deployment Stage') {
           steps{
                withMaven(maven : 'maven_3_6_1') {
-                  sh 'mvn deploy'
+                  sh 'mvn clean compile'
           }
       }
      }
