--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,25 +1,25 @@
 pipeline {
    agent any
-
+   
    stages {
      stage ('Compile Stage') {
           steps{
-               withMaven(maven : 'maven_3_6_1') {
-                  sh 'mvn clean compile'
+               maven(maven : 'maven_3_6_1') {
+                  bat 'mvn clean compile'
           }
       }
     }
      stage ('Testing Stage') {
           steps{
-               withMaven(maven : 'maven_3_6_1') {
-                  sh 'mvn clean compile'
+               maven(maven : 'maven_3_6_1') {
+                  bat 'mvn clean compile'
           }
       }
      }
      stage ('Deployment Stage') {
           steps{
-               withMaven(maven : 'maven_3_6_1') {
-                  sh 'mvn clean compile'
+               maven(maven : 'maven_3_6_1') {
+                  bat 'mvn clean compile'
           }
       }
      }
