--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,25 +1,25 @@
 pipeline {
-   agent any
-   
+   agent any;
+
    stages {
      stage ('Compile Stage') {
           steps{
-               maven(maven : 'maven_3_6_1') {
-                  bat 'mvn clean compile'
+               withMaven(maven : 'maven_3_6_1') {
+                  sh 'mvn clean compile'
           }
       }
     }
      stage ('Testing Stage') {
           steps{
-               maven(maven : 'maven_3_6_1') {
-                  bat 'mvn clean compile'
+               withMaven(maven : 'maven_3_6_1') {
+                  sh 'mvn test'
           }
       }
      }
      stage ('Deployment Stage') {
           steps{
-               maven(maven : 'maven_3_6_1') {
-                  bat 'mvn clean compile'
+               withMaven(maven : 'maven_3_6_1') {
+                  sh 'mvn deploy'
           }
       }
      }
